# agentdef

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NAMING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  STATUS.md  TASKS.md  conftest.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  framework_request.md
.github/workflows/: pages.yml  release.yml  validate.yml
adapters/claude/: generate.py
adapters/copilot/: generate.py
adapters/cursor/: generate.py
adapters/langgraph/: generate.py
adapters/openai/: generate.py
adapters/tests/: test_golden.py
conformance/: README.md  manifest.json
docs/: RELEASING.md  STATUS.md  TASKS.md  azure-mapping.md  cli.md  comparisons.md  dashboard-tour.md  design-rationale.md  faq.md  gallery.md  getting-started.md  index.md  scorecard.md
docs/migrations/: claude.md  copilot.md  cursor.md  generic.md  openai.md
examples/claude-to-copilot-demo/: 00-source-claude-subagent.md  02-copilot-instructions.md  README.md  demo.html
examples/mission-writer/: agent.md  manifest.yaml
examples/twitter-digest/: agent.md  manifest.yaml
importers/claude/: import.py
importers/copilot/: import.py
importers/copilotstudio/: import.py
spec/: REVIEW.md  SPEC.md
tests/: test_conformance.py  test_crewai_letta.py  test_fixedpoint.py  test_init.py  test_mcp.py  test_new_importers.py  test_roundtrip.py  test_sync.py
tools/: gallery.py  gen_conformance.py  scorecard.py
understand-dashboard/: package-lock.json  package.json  tsconfig.app.json  vite.config.demo.ts  vite.config.ts
validation/: validate.py
(+164 files in other folders)
