[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdef"
version = "0.2.0"
description = "Portable AI agent definitions — validate, adapt, and import agent specs across frameworks (Claude, OpenAI, Cursor, GitHub Copilot, Microsoft 365 Copilot, Copilot Studio, LangGraph)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "AgentDef contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/agentdef/agentdef"
Specification = "https://github.com/agentdef/agentdef/blob/main/spec/SPEC.md"
Changelog = "https://github.com/agentdef/agentdef/blob/main/CHANGELOG.md"

[project.scripts]
agentdef = "agentdef.cli:main"

[tool.setuptools.packages.find]
where = ["pysrc"]
include = ["agentdef*"]

[tool.setuptools.package-dir]
"" = "pysrc"

[tool.setuptools.package-data]
agentdef = ["schemas/*.json", "validation/requirements.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pysrc"]
